--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; }
+* { margin: 0; font-family: 'Roboto Slab', serif; }
+
+
+body{
+  background-image: url('/assets/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: 100vw 75vh;
+  background-color: rgb(242, 242, 255);
+}
+hr{
+  border-color: darkgray;
+}
+a {
+  text-decoration: none;
+}
+.navbar {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.5rem 1rem;
+}
