--- a/client/src/app/pages/signup/signup.component.scss
+++ b/client/src/app/pages/signup/signup.component.scss
@@ -1,56 +1,48 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+* {
+  box-sizing: border-box;
+}
 input[type="text"],
 input[type="email"],
 input[type="number"],
 input[type="password"] {
   width: 100%;
-  padding: 15px;
+  padding: 10px;
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
   border: 1px solid #ccc;
   background-color: rgba(242, 242, 242, 0.9);
 }
-
-input[type="text"]:focus,
-input[type="password"]:focus {
-  background-color: rgba(242, 242, 242, 0.9);
-  border: 1px solid #ccc;
-  outline: none;
-}
-
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
-
 button {
-  background-color: #04aa6d;
-  color: white;
+  color: #fff;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  width: 100%;
   opacity: 0.9;
+  float: left;
 }
-
+button + button { margin-left: 15px;}
 button:hover {
   opacity: 1;
+  color: #000;
 }
-
 .cancelbtn {
   padding: 14px 20px;
-  background-color: #f44336;
 }
-
-.cancelbtn,
-.signupbtn {
-  float: left;
-  width: 50%;
-}
-
 .container {
   padding: 16px;
+}
+.form {
+  border: 0px solid #ccc;
+  padding-top: 20px
 }
 
 .clearfix::after {
@@ -58,26 +50,47 @@ button:hover {
   clear: both;
   display: table;
 }
+.formbtn {
+  // margin: 0 auto;
+  // width: 300px;
+  text-align: center;
+  margin-left: 50%;
+  transform: translateX(-30%);
+}
 .spinner-custom {
-  width: 3rem; height: 3rem
+  width: 3rem;
+  height: 3rem;
 }
-.loader-container h3 {
-  margin-top: 10px; color: white
+.loader-container > h3 {
+  margin-top: 10px;
+  color: white
 }
-.signup div {
-  background-image: url(../../../assets/images/login_background.jpg);
+.signup {
+  background-image: url("../../../assets/images/login_background.jpg");
   background-size: cover;
   padding-top: 5em;
   padding-bottom: 5em;
   margin: 3px 0px;
 }
-
-.signup div h1 {
+.signup > div {
+  width: 50%;
+  margin: auto;
+  background: rgb(246, 246, 246);
+  border-radius: 10px;
+  padding: 50px;
+  box-shadow: 0px 0px 10px #333;
+  text-align: center;
+}
+.signup > div h1 {
   margin-top: 10px;
   margin-bottom: 10px;
   font-weight: bold;
   font-size: 28px;
   font-weight: bolder;
+}
+.form-label {
+  float: left;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 300px) {
