style for signup and login page

--- a/client/src/app/pages/signup/signup.component.html
+++ b/client/src/app/pages/signup/signup.component.html
@@ -9,7 +9,7 @@
       SIGN-UP
     </h1>
 
-    <form action="/action_page.php" class="form" >
+    <form action="" class="form" >
       <div>
         <form (submit)="handleSubmit($event)" ngNativeValidate>
           <div class="mb-3">
@@ -58,7 +58,6 @@
             By creating an account you agree to our
             <a href="#" style="color: dodgerblue">Terms & Privacy</a>.
           </p>
-          <br />
 
           <div class="clearfix formbtn">
               <button type="submit" class="btn btn-danger" >
