--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,1 +1,52 @@
-<p>login works!</p>
+<div class="loader-container" *ngIf="displayModal">
+  <div class="spinner-border text-light spinner-custom" role="status"></div>
+  <h3>Loading</h3>
+</div>
+
+<div class="signup" >
+  <div>
+    <h1>
+      LOGIN
+    </h1>
+
+    <form method="post" class="form">
+      <div class="container">
+        <form (submit)="handleLogin($event)" ngNativeValidate>
+          <div class="mb-3">
+            <label for="username" class="form-label">USERNAME</label>
+            <input type="text" class="form-control"
+              placeholder="Enter Username" name="username"
+              required
+            />
+          </div>
+
+          <div class="mb-3">
+            <label for="password" class="form-label">PASSWORD</label>
+            <input class="form-control" type="password"
+              placeholder="Enter Password" name="password"
+              required
+            />
+          </div>
+
+          <div>
+            <label class="form-label" >
+              <input type="checkbox" name="remember" />
+              Remember me
+            </label>
+          </div>
+
+          <div class="clearfix formbtn">
+            <button type="submit" class="btn btn-danger">
+              LOGIN
+            </button>
+
+            <button type="reset" class="btn btn-warning">
+              CANCEL
+            </button>
+          </div>
+
+        </form>
+      </div>
+    </form>
+  </div>
+</div>
