--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
-
+@import "ngx-toastr/toastr";
 hr{
   border-color: darkgray;
 }
@@ -10,4 +9,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   padding: 0.5rem 1rem;
+}
+.carousel-caption {
+  z-index:0;
 }
