--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,9 +1,34 @@
 @import "ngx-toastr/toastr";
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+* {
+  box-sizing: border-box;
+}
 hr{
-  border-color: darkgray;
+  border: 1px solid darkgray;
+  margin-bottom: 25px;
 }
 a {
   text-decoration: none;
+}
+button {
+  color: #fff;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  opacity: 0.9;
+  float: left;
+}
+button + button { margin-left: 15px;}
+button:hover {
+  opacity: 1;
+  color: #000;
+  text-decoration: none;
+}
+.container {
+  padding: 16px;
 }
 .navbar {
   display: flex;
@@ -12,4 +37,22 @@ a {
 }
 .carousel-caption {
   z-index:0;
+}
+.error {
+  color: red;
+  text-align: left;
+  padding-bottom: 10px;
+  display: block;
+}
+input[type="text"],
+input[type="email"],
+input[type="number"],
+input[type="password"] {
+  width: 100%;
+  padding: 12px;
+  margin: 5px 0 5px 0;
+  display: inline-block;
+  border: none;
+  border: 1px solid #ccc;
+  background-color: rgba(242, 242, 242, 0.9);
 }
