--- a/client/src/app/pages/login/login.component.scss
+++ b/client/src/app/pages/login/login.component.scss
@@ -30,7 +30,7 @@
   color: white
 }
 .login {
-  background-image: url("../../../assets/images/login_background.jpg");
+  //background-image: url("../../../assets/images/login_background.jpg");
   background-size: cover;
   padding-top: 5em;
   padding-bottom: 5em;
