--- a/client/src/app/pages/signup/signup.component.html
+++ b/client/src/app/pages/signup/signup.component.html
@@ -9,7 +9,7 @@
       SIGN-UP
     </h1>
 
-    <form class="form" >
+    <div class="form" >
       <div>
         <form (submit)="handleSubmit($event)" ngNativeValidate>
           <div class="mb-3">
@@ -84,6 +84,6 @@
           </div>
         </form>
       </div>
-    </form>
+    </div>
   </div>
 </div>
