add backend, update code for home page

--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
   href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
 />
 
-<div
+<!-- <div
   class="navbar is-lightyellow"
   style="justify-content: center; z-index: 1000; position: relative"
   *ngIf="showWelcomeHeader"
@@ -33,7 +33,7 @@
         /></p
     ></a>
   </div>
-</div>
+</div> -->
 
 <nav
   class="navbar is-info"
@@ -105,7 +105,7 @@
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           <h3 style="margin-bottom: 5px; font-family: Georgia">
-            <b> More </b>
+            <b>More</b>
           </h3>
         </a>
 
@@ -144,13 +144,7 @@
             <img
               src="../../../assets/images/profilePhoto.jpg"
               alt="profileImage"
-              style="
-                border-radius: 250px;
-                width: 28px;
-                height: 105px;
-                box-sizing: border-box;
-                transform: scale(1.5);
-              "
+              class="profileImage"
             />
           </a>
 
