--- a/client/src/app/pages/signup/signup.component.html
+++ b/client/src/app/pages/signup/signup.component.html
@@ -22,14 +22,14 @@
             />
             <small *ngIf="!flags.username" class="error">Invalid username</small>
           </div>
-          <div class="mb-3">
+          <!-- <div class="mb-3">
             <label for="fullname" class="form-label">Full Name</label>
             <input class="form-control" type="text" placeholder="Enter Full Name" name="fullname" required
             #fullname (keydown)="validateFullname(fullname);enableButton()"
             (blur)="validateFullname(fullname);enableButton()"
             [(ngModel)]="user.fullname" />
             <small *ngIf="!flags.fullname" class="error">Invalid Full Name</small>
-          </div>
+          </div> -->
 
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
@@ -54,8 +54,7 @@
             <label for="password" class="form-label">Password</label>
             <input class="form-control" type="password" placeholder="Enter Password"
               name="password" required [(ngModel)]="user.password"
-              (blur)="comparePassword(); enableButton()"
-              (keydown)="comparePassword(); enableButton()"/>
+              />
               <small *ngIf="!flags.password" class="error">Invalid Password</small>
           </div>
 
