--- a/client/src/app/shared/header/header.component.scss
+++ b/client/src/app/shared/header/header.component.scss
@@ -5,3 +5,13 @@
   box-sizing: border-box;
   transform: scale(1.5);
 }
+h3 {
+  margin-bottom: 5px; font-family: Georgia; font-weight: bolder;
+}
+a,a:hover {
+  text-decoration: none;
+}
+hr.navbar-divider {
+  background-color: #ccc;
+  height: 2px;
+}
