--- a/client/src/app/shared/header/header.component.scss
+++ b/client/src/app/shared/header/header.component.scss
@@ -15,3 +15,7 @@ hr.navbar-divider {
   background-color: #ccc;
   height: 2px;
 }
+.navbar{
+  background-color: #0f67b0;
+  box-shadow: 0px -3px 10px rgb(113, 113, 113);
+}
