--- a/client/src/app/pages/signup/signup.component.html
+++ b/client/src/app/pages/signup/signup.component.html
@@ -16,17 +16,17 @@
             <label for="username" class="form-label">Username</label>
             <input class="form-control" type="text"
               placeholder="Enter Username" name="username"
-              (keydown)="validateUsername(username, 'username');enableButton()"
-              (blur)="validateUsername(username,'username'); enableButton()"
-              #username required [(ngModel)]="user.username"
+              (keyup)="validateUsername();enableButton()"
+              (blur)="validateUsername(); enableButton()"
+              required [(ngModel)]="user.username"
             />
             <small *ngIf="!flags.username" class="error">Invalid username</small>
           </div>
           <div class="mb-3">
             <label for="fullname" class="form-label">Full Name</label>
             <input class="form-control" type="text" placeholder="Enter Full Name" name="fullname" required
-            #fullname (keydown)="validateFullname(fullname);enableButton()"
-            (blur)="validateFullname(fullname);enableButton()"
+            (keyup)="validateFullname();enableButton()"
+            (blur)="validateFullname();enableButton()"
             [(ngModel)]="user.fullname" />
             <small *ngIf="!flags.fullname" class="error">Invalid Full Name</small>
           </div>
@@ -34,7 +34,7 @@
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
             <input class="form-control" type="email" placeholder="Enter Email" name="email" required
-            #email (keydown)="validateEmail(email);enableButton()"
+            #email (keyup)="validateEmail(email);enableButton()"
             (blur)="validateEmail(email);enableButton()"
             [(ngModel)]="user.email"/>
             <small *ngIf="!flags.email" class="error">Invalid Email</small>
@@ -44,8 +44,8 @@
             <label for="phone" class="form-label">Phone Number</label>
             <input class="form-control" type="text" pattern="^[0-9]{10}$"
             placeholder="Enter Phone Number" name="phone"
-            #phone (keydown)="validatePhone(phone);enableButton()"
-            (blur)="validatePhone(phone);enableButton()"
+            (keyup)="validatePhone();enableButton()"
+            (blur)="validatePhone();enableButton()"
             [(ngModel)]="user.phone"/>
             <small *ngIf="!flags.phone" class="error">Invalid Phone Number</small>
           </div>
@@ -63,7 +63,7 @@
             <input class="form-control" type="password" placeholder="Repeat Password"
               name="repeatpassword" required [(ngModel)]="repeatPassword"
               (blur)="comparePassword(); enableButton()"
-              (keydown)="comparePassword(); enableButton()"/>
+              (keyup)="comparePassword(); enableButton()"/>
               <small *ngIf="!flags.repeatPassword" class="error">Repeat password is not match</small>
           </div>
 
