--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -30,7 +30,8 @@
 
           <div>
             <label class="form-label" >
-              <input type="checkbox" name="remember" [(ngModel)]="rememberMe" />
+              <input type="checkbox" name="remember" [(ngModel)]="rememberMe"
+              />
               Remember me
             </label>
           </div>
