--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -64,8 +64,8 @@
         </a>
 
         <div class="navbar-dropdown">
-          <a class="navbar-item" routerLink="/aboutus"> About </a>
-          <a class="navbar-item" routerLink="/contactus"> Contact </a>
+          <a class="navbar-item" routerLink="/about"> About </a>
+          <a class="navbar-item" routerLink="/contact"> Contact </a>
           <div *ngIf="user.length > 0">
             <hr class="navbar-divider" />
             <a class="navbar-item" routerLink="/report-issue">
