--- a/client/src/app/pages/contact-us/contact-us.component.html
+++ b/client/src/app/pages/contact-us/contact-us.component.html
@@ -1,168 +1,39 @@
 <div class="container">
-  <p
-    style="
-      font-weight: bolder;
-      font-size: 30px;
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      color: black;
-    "
-  >
-    <b>CONTACT US</b>
-  </p>
-  <br />
-  <br />
-  <p
-    style="
-      font-weight: bolder;
-      font-size: 25px;
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      color: rgba(0, 0, 0, 0.664);
-    "
-  >
-    <b>Our Officies</b>
-  </p>
-  <br />
+  <h1>CONTACT US</h1>
+
+  <h2>Our Officies</h2>
+
   <div class="card">
     <img
-      src="assets/images/direction1.png"
+      src="assets/images/office1.jpeg"
       alt="Avatar"
       style="width: fit-content; margin-left: 15px"
     />
     <div class="container">
-      <b
-        style="
-          font-family: Georgia, 'Times New Roman', Times, serif;
-          font-size: 20px;
-        "
-        >Mumbai</b
-      >
-      <br /><br />
-      <p
-        style="
-          font-weight: bolder;
-          font-size: 15px;
-          font-family: Georgia, 'Times New Roman', Times, serif;
-          color: rgb(5, 66, 66);
-          margin-left: 22px;
-        "
-      >
+      <h3>MIU University</h3>
+      <p class="address">
       1000 N 4th St, Fairfield, IA 52557
       </p>
     </div>
   </div>
 
-  <div class="cardcenter">
-    <img
-      src="assets/images/direction2.png"
-      alt="Avatar"
-      style="width: fit-content; margin-left: 15px"
-    />
-    <div class="container">
-      <b
-        style="
-          font-family: Georgia, 'Times New Roman', Times, serif;
-          font-size: 20px;
-        "
-        >Bangalore</b
-      >
-      <br /><br />
-      <p
-        style="
-          margin-left: 28px;
-          font-weight: bolder;
-          font-size: 15px;
-          font-family: Georgia, 'Times New Roman', Times, serif;
-          color: rgb(5, 66, 66);
-        "
-      >
-        AeroFly India Pvt. Ltd. Embassy Tech Village, Outer Ring Rd, Bengaluru,
-        Karnataka 560103
-      </p>
-    </div>
+  <div class="container2">
+    <h1>EMAIL</h1>
+
+    <h2>For booking queries and support, visit:</h2>
+    <a
+      href="/report"
+      >http://www.miuairport.com/support</a>
+
+    <p></p>
+
+    <h3>For concerns regarding Privacy statement & practices,
+      <a href="/report" >Click Here</a>
+    </h3>
   </div>
 
-  <div>
-    <p
-      style="
-        font-weight: bolder;
-        font-size: 25px;
-        margin-top: 100px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        color: rgba(0, 0, 0, 0.767);
-      "
-    >
-      <b>EMAIL</b>
-    </p>
-    <br />
-    <p
-      style="
-        font-weight: bolder;
-        font-size: 25px;
-        margin-top: 14px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        color: rgba(0, 0, 0, 0.768);
-      "
-    >
-      For booking queries and support, visit
-    </p>
-
-    <p>
-      <a
-        href="/report"
-        style="
-          font-weight: bolder;
-          margin-top: 15px;
-          font-size: 18px;
-          font-family: Georgia, 'Times New Roman', Times, serif;
-        "
-        ><u>http://www.miuairport.com/support</u></a
-      >
-    </p>
-
-    <br />
-
-    <p
-      style="
-        font-weight: bolder;
-        font-size: 18px;
-        margin-top: 7px;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        color: rgba(0, 0, 0, 0.768);
-      "
-    >
-      <b
-        >For concerns regarding Privacy statement & practices,
-
-        <a
-          href="/report"
-          style="
-            font-weight: bolder;
-            margin-top: 8px;
-            font-size: 18px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-          "
-          ><u>Click Here</u></a
-        >
-
-        <p
-          style="
-            font-weight: bolder;
-            font-size: 25px;
-            margin-top: 57px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            color: rgba(0, 0, 0, 0.767);
-          "
-        >
-          <b>ENGAGE WITH US</b>
-        </p>
-        <br />
-      </b>
-    </p>
-  </div>
-
-  <br />
-
-  <div>
+  <div class="container2">
+    <h1>ENGAGE WITH US</h1>
     <div class="cardleft1">
       <img
         src="assets/images/facebook.png"
@@ -170,16 +41,8 @@
         style="width: 42px; margin-left: 140px"
       />
       <div class="container">
-        <p
-          style="
-            margin-left: 28px;
-            font-weight: bolder;
-            font-size: 15px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            color: darkcyan;
-          "
-        >
-          <u>Connect With us on FaceBook</u>
+        <p class="text">
+          Connect With us on FaceBook
         </p>
       </div>
     </div>
@@ -191,42 +54,24 @@
         style="width: 50px; margin-left: 140px"
       />
       <div class="container">
-        <p
-          style="
-            font-weight: bolder;
-            font-size: 15px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            color: darkcyan;
-          "
-        >
-          <u>Follow us on Twitter</u>
+        <p class="text">
+        Follow us on Twitter
         </p>
       </div>
     </div>
 
     <div class="cardcenter1">
       <img
-        src="assets/images/inkedin.png"
+        src="assets/images/linkedin.png"
         alt="Avatar"
         style="width: 50px; margin-left: 140px"
       />
       <div class="container">
-        <p
-          style="
-            margin-left: 28px;
-            font-weight: bolder;
-            font-size: 15px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            color: darkcyan;
-          "
-        >
-          <u>Stay Connected on Linked-In</u>
+        <p class="text">
+          Stay Connected on Linked-In
         </p>
       </div>
     </div>
-
-    <br />
-    <br />
   </div>
 </div>
 
