--- a/client/src/app/pages/account-settings/account-settings.component.html
+++ b/client/src/app/pages/account-settings/account-settings.component.html
@@ -1,1 +1,96 @@
-<p>account-settings works!</p>
+<div class="loader-container" *ngIf="displayModal">
+  <div class="spinner-border text-light spinner-custom" role="status"></div>
+  <h3>Loading</h3>
+</div>
+
+<div class="container">
+  <h1>Account Settings</h1>
+
+  <div class="card mt-4" style="width: 100%; box-shadow: '0px 0px 7px #ccc'">
+    <div class="card-body">
+      <h4 class="card-title font-weight-bold">Update Account Details</h4>
+      <form (submit)="handleUpdateAccoutDetails($event)" ngNativeValidate>
+        <div class="mb-3 mt-4">
+          <label for="fullname" class="form-label">Fullname</label>
+          <input
+            type="text"
+            class="form-control"
+            id="fullname"
+            name="fullname"
+            placeholder="Fullname"
+            [(ngModel)]="fullname"
+            required
+          />
+        </div>
+        <div class="mb-3 mt-4">
+          <label for="phoneNo" class="form-label">Phone No</label>
+          <input
+            type="text"
+            class="form-control"
+            id="phone"
+            name="phone"
+            placeholder="Phone"
+            [(ngModel)]="phone"
+            required
+          />
+        </div>
+        <div class="d-grid mt-4">
+          <button type="submit" class="btn btn-primary">Update Details</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <!-- Change Password -->
+  <div class="card mt-4" style="width: 100%; box-shadow: '0px 0px 7px #ccc'">
+    <div class="card-body">
+      <h4 class="card-title font-weight-bold">Change Password</h4>
+      <form (submit)="handleChangePassword($event)" ngNativeValidate>
+        <div class="mb-3 mt-4">
+          <label for="old-password" class="form-label">Old Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="old-password"
+            name="old-password"
+            placeholder="Old Password"
+            [(ngModel)]="oldPassword"
+            required
+          />
+        </div>
+
+        <div class="mb-3 mt-4">
+          <label for="new-password" class="form-label">New Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="new-password"
+            name="new-password"
+            placeholder="New Password"
+            [(ngModel)]="password"
+            required
+          />
+        </div>
+
+        <div class="mb-3 mt-4">
+          <label for="new-confirm-password" class="form-label"
+            >Confirm Password</label
+          >
+          <input
+            type="password"
+            class="form-control"
+            id="new-confirm-password"
+            name="new-confirm-password"
+            placeholder="Confirm Password"
+            [(ngModel)]="confirmPassword"
+            required
+          />
+        </div>
+
+        <div class="d-grid mt-4">
+          <button type="submit" class="btn btn-primary">Change Password</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
