--- a/client/src/app/pages/account-settings/account-settings.component.scss
+++ b/client/src/app/pages/account-settings/account-settings.component.scss
@@ -5,3 +5,27 @@ h1 {
   color: black;
   margin: 0 5px 20px 0;
 }
+.column {
+  float: left;
+  width: 46%;
+  box-shadow: '0px 0px 7px #ccc';
+}
+.column + .column {
+  margin-left: 2%;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.mt-4 {
+  padding-bottom: 20px;
+}
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+  .column + .column {
+    margin-left: 0;
+  }
+}
