--- a/client/src/app/pages/airport/airport.component.html
+++ b/client/src/app/pages/airport/airport.component.html
@@ -1,1 +1,8 @@
-<p>airport works!</p>
+<!-- <div class="loader-container" *ngIf="displayModal">
+  <div class="spinner-border text-light spinner-custom" role="status"></div>
+  <h3>Loading</h3>
+</div> -->
+
+<div class="All container">
+  <h1>Airport Management</h1>
+</div>
