--- a/client/src/app/pages/flight-booking/flight-booking.component.html
+++ b/client/src/app/pages/flight-booking/flight-booking.component.html
@@ -1,1 +1,8 @@
-<p>flight-booking works!</p>
+<!-- <div class="loader-container" *ngIf="displayModal">
+  <div class="spinner-border text-light spinner-custom" role="status"></div>
+  <h3>Loading</h3>
+</div> -->
+
+<div class="All container">
+  <h1>Flight Booking</h1>
+</div>
