--- a/client/src/app/pages/profile/profile.component.html
+++ b/client/src/app/pages/profile/profile.component.html
@@ -1,9 +1,8 @@
-<!-- <div class="loader-container" *ngIf="displayModal">
+<div class="loader-container" *ngIf="displayModal">
   <div class="spinner-border text-light spinner-custom" role="status"></div>
   <h3>Loading</h3>
-</div> -->
-
-<div class="All container">
-  <h1>About Us</h1>
 </div>
 
+<div class="All container">
+  <h1>Your Information</h1>
+</div>
