update header for customer role

--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -27,9 +27,25 @@
           <b> OFFERS </b>
         </h3>
       </a> -->
+      <div
+        *ngIf="user.length > 0 && user[0].roles[0] === userRole"
+        class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">
+          <h3>Your Management</h3>
+        </a>
+        <div class="navbar-dropdown">
+          <a class="navbar-item" routerLink="/flight-history">
+            Flight History
+          </a>
+          <!-- <hr class="navbar-divider" />
+          <a class="navbar-item" routerLink="/report-issue">
+            Report an issue
+          </a> -->
+        </div>
+      </div>
 
       <div
-        *ngIf="user[0].roles[0] === adminRole"
+        *ngIf="user.length > 0 && user[0].roles[0] === adminRole"
         class="navbar-item has-dropdown is-hoverable"
       >
         <a class="navbar-link">
