start building user microservice

--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -122,8 +122,8 @@
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
             <span style="margin-right: 20px; font-weight: bold; font-size: 18px"
-              >Welcome, {{ user[0].fullname }}</span
-            >
+              >Welcome, {{ user[0].username }}</span
+            > <!--fullname-->
             <img
               src="../../../assets/images/profilePhoto.jpg"
               alt="profileImage"
@@ -133,9 +133,9 @@
 
           <div class="navbar-dropdown">
             <a class="navbar-item" routerLink="/profile">Profile</a>
-            <!-- <a class="navbar-item" routerLink="/account-settings">
+            <a class="navbar-item" routerLink="/account-settings">
               Account Settings
-            </a> -->
+            </a>
             <hr class="navbar-divider" />
             <a class="navbar-item is-primary"
               (click)="handleLogout()" >
