--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -80,11 +80,8 @@
   </a>
 </div>
 
-<div
-  class="All"
-  style="background-image: url(assets/images/background_img1.jpg)"
->
-  <div class="container" style="margin-top: 35px; margin-bottom: 35px">
+<div class="all">
+  <div class="container2 box-custom">
     <img
       src="assets/images/window1.jpg"
       alt="Avatar"
@@ -103,7 +100,7 @@
     </div>
   </div>
 
-  <div class="container2" style="margin-top: 20px; margin-bottom: 35px">
+  <div class="container2 box-custom">
     <img
       src="assets/images/seat.jpg"
       alt="Avatar"
@@ -121,7 +118,7 @@
     </div>
   </div>
 
-  <div class="container2" style="margin-top: 20px; margin-bottom: 35px">
+  <div class="container2 box-custom">
     <img
       src="assets/images/piolet.jpg"
       alt="Avatar"
