--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -87,6 +87,13 @@
           <!-- <a class="navbar-item" routerLink="/invoice"> Flight Invoice </a> -->
         </div>
       </div>
+
+      <a *ngIf="user.length > 0 && user[0].roles[0] === adminRole"
+        class="navbar-item"
+        routerLink="/user">
+        <h3>User Management</h3>
+      </a>
+
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           <h3>More</h3>
