--- a/client/src/app/shared/header/header.component.scss
+++ b/client/src/app/shared/header/header.component.scss
@@ -19,3 +19,7 @@ hr.navbar-divider {
   background-color: #0f67b0;
   box-shadow: 0px -3px 10px rgb(113, 113, 113);
 }
+.navbar.is-info {
+  background-color: #0f67b0;
+  color: #fff;
+}
