--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -69,6 +69,7 @@
     data-slide="prev"
   >
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
   </a>
   <a
     class="carousel-control-next"
@@ -77,6 +78,7 @@
     data-slide="next"
   >
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
   </a>
 </div>
 
