--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -118,7 +118,9 @@
           <a class="button is-primary" routerLink="/signup">
             <strong>Sign up</strong>
           </a>
-          <a class="button is-primary" (click)="handleLoginButton($event)">
+          <a class="button is-primary"
+          (click)="handleLoginButton($event)"
+          >
             <strong>Login</strong>
           </a>
         </div>
